- Some initial texture functions; - Fix in variables in header files that weren't externals; - Correction in load 2D data function call.

--- a/Computer Graphics Final Project.vcxproj
+++ b/Computer Graphics Final Project.vcxproj
@@ -152,6 +152,8 @@
     <ClCompile Include="GPUData.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Shader.cpp" />
+    <ClCompile Include="stb_image.cpp" />
+    <ClCompile Include="Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BufferClear.h" />
@@ -159,10 +161,16 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="GPUData.h" />
     <ClInclude Include="Shader.h" />
+    <ClInclude Include="stb_image.h" />
+    <ClInclude Include="Texture.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="LenticularShader.frag" />
     <None Include="LenticularShader.vert" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Images\gru delete this.jpg" />
+    <Image Include="Images\GRU.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
