--- a/Computer Graphics Final Project.vcxproj.filters
+++ b/Computer Graphics Final Project.vcxproj.filters
@@ -16,6 +16,9 @@
     <Filter Include="Source Files\Shaders">
       <UniqueIdentifier>{622bfbe8-789d-4e81-bfe4-4cf0043f28b6}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Images">
+      <UniqueIdentifier>{d07bec06-9d0a-47a3-9cce-486b18ad92d3}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="glad.c">
@@ -39,6 +42,12 @@
     <ClCompile Include="GPUData.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="stb_image.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Texture.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h">
@@ -56,6 +65,12 @@
     <ClInclude Include="GPUData.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="stb_image.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Texture.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="LenticularShader.vert">
@@ -64,5 +79,13 @@
     <None Include="LenticularShader.frag">
       <Filter>Source Files\Shaders</Filter>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Images\gru delete this.jpg">
+      <Filter>Images</Filter>
+    </Image>
+    <Image Include="Images\GRU.jpg">
+      <Filter>Images</Filter>
+    </Image>
   </ItemGroup>
 </Project>
