--- a/Computer Graphics Final Project.vcxproj.filters
+++ b/Computer Graphics Final Project.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="Input.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GlintProgram.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h">
@@ -77,12 +80,21 @@
     <ClInclude Include="Input.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GlintProgram.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="LenticularShader.vert">
       <Filter>Source Files\Shaders</Filter>
     </None>
     <None Include="LenticularShader.frag">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="GlintShader.vert">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="GlintShader.frag">
       <Filter>Source Files\Shaders</Filter>
     </None>
   </ItemGroup>
